--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 .gradle
 build/
-logback-spring/spring.log
+logback-spring/
 !**/src/main/**/build/
 !**/src/test/**/build/
 src/main/resources/application.yml
